--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+.App{
+  width:100vw;
+  height:100vh;
+  
 }
+.body{
+  margin:0;
+  padding:0;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.sidebar{
+  height:100%;
+  width:250px;
+  background-color: #2F4050;
 }
+.sidebarList{
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  height:auto;
+  padding:0;
+  padding-top: 10px;
+  width:100%;
+}
+.sidebarList .row{
+  width:100%;
+  height:50px;
+  border: 1px solid black;
+  list-style-type: none;
+  margin:0;
+  display: flexbox;
+  flex-direction: row;
+  color:white;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
+  /* background-color: aqua; */
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.row #icon{
+  flex:30%;
 }
