--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,49 @@
-.App{
-  width:100vw;
-  height:100vh;
-  
-}
-.body{
+
+*{
   margin:0;
   padding:0;
-
+  text-decoration: none;
+  font-family: 'Inter', sans-serif;
+}
+.container{
+  display:flex;
+}
+main{
+  width: 100%;
+  padding: 20px;
 }
 .sidebar{
-  height:100%;
-  width:250px;
-  background-color: #2F4050;
+  background: #000;
+  color: #fff;
+  height: 100vh;
+  width: 300px;
+  transition: all 0.5s;
 }
-.sidebarList{
+.top_section{
+  display: flex;
+  align-items:center;
+  padding:20px 15px;
+}
+.logo{
+  font-size: 20px;
+}
+.bars{
+  display: flex;
+  font-size: 20px;
+  margin-left: 50px;
+}
+.link{
+  display: flex;
+  color: #fff;
+  padding: 20px 15px;
+  gap: 15px;
+  transition: all 0.5s;
+}
 
-  height:auto;
-  padding:0;
-  padding-top: 10px;
-  width:100%;
+.active{
+  background: lightskyblue;
+  color: #000;
 }
-.sidebarList .row{
-  width:100%;
-  height:50px;
-  border: 1px solid black;
-  list-style-type: none;
-  margin:0;
-  display: flexbox;
-  flex-direction: row;
-  color:white;
-  justify-content: center;
-  align-items: center;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
-  /* background-color: aqua; */
-}
-.row #icon{
-  flex:30%;
+.icon, .link_text{
+  font-size: 18px;
 }
