--- a/src/pages/MainDash/MainDash.css
+++ b/src/pages/MainDash/MainDash.css
@@ -1,7 +1,13 @@
 .dashboard {
-    margin-top: 100px;
-    padding: 0px 30px;
+    margin-top: 0px;
     padding-bottom: 50px;
+  }
+  .dashboard__wrapper{
+    padding:15px;
+    margin-top: 35px;
+    margin-left:45px;
+    margin-right: 45px
+
   }
   
 .single__card {
@@ -22,11 +28,19 @@
   }
   
   .single__card:nth-child(3) {
-    background: #f4c675;
+    background: #ee83bf;
   }
   
   .single__card:nth-child(4) {
     background: #75f4d6;
+  }
+  
+  .single__card:nth-child(5) {
+    background: #f4c675;
+  }
+  
+  .single__card:nth-child(6) {
+    background: #b2d9ff;
   }
   
   .card__content h4 {
@@ -47,7 +61,9 @@
   }
   
   .dashboard__cards {
+    padding-top: 25px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 3rem;
     column-gap: 2rem;
   }
