--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 }
 main{
   width: 100%;
-  padding: 20px;
+  padding: 0px;
 }
 .sidebar{
   background: #000;
@@ -20,6 +20,7 @@ main{
   height: 100vh;
   width: 300px;
   transition: all 0.5s;
+  margin-left: 0;
 }
 .top_section{
   display: flex;
@@ -55,7 +56,7 @@ img {
   max-width: 100%;
   height: auto;
 }
-.App {
+.page {
   min-height: 100vh;
   width: 85vw;
   max-width: 1900px;
