--- a/src/components/NavBar-Main/NavBar.css
+++ b/src/components/NavBar-Main/NavBar.css
@@ -12,5 +12,9 @@
     margin-left: auto;
   }
   .profile-dropdown {
-    margin-right: 3.5rem;
+    margin-right: 4rem;
   }
+  .dropdown-menu.profile-dropdown {
+  max-height: unset;
+  overflow-y: hidden;
+}
