--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,27 +1,32 @@
 .hero {
-    background-image: url("../../Assets/banner.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    height: 90vh;
-    width: 100%;
-  }
-  .hero h1{
-    font-size: 45px;
-    color: white;
-  }
-  .container{
-    padding-top: 200px;
+  background-image: url("../../Assets/banner.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 90vh;
+  width: 100%;
+}
 
-  }
-  .content{
-    display: flex;
-    padding-left: 400px;
-    padding-right: 400px;
-    padding-top: 35px;
-    justify-content: center;
-    font-size: 22px;
-    color: #EEEEEE;
-    opacity: 0.8;
+.hero h1 {
+  font-size: 2.5vw;
+  color: white;
+}
 
+.container {
+  padding-top: 10vh;
+}
+
+.content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  font-size: 1.5vw;
+  color: #eeeeee;
+  opacity: 0.8;
+  padding: 0 10%;
+
+  /* Media Queries */
+  @media (max-width: 768px) {
+    font-size: 2.5vw;
   }
+}
